Added reset button. Started JS function.AddedParty

--- a/style.css
+++ b/style.css
@@ -38,6 +38,10 @@ body {
     text-align: center;
 }
 
+.resultBox  {
+    align-items: center;
+}
+
 table, tr, th, td {
     position: center;
   }
