--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body {
     margin-right: 5px;
     width: 20rem;
 }
+
+#button__container  {
+    text-align: center;
+}
   
 .copp {
     background-color: #C47F2B;
