--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     margin-bottom: 10px;
     margin-right: 5px;
     width: 20rem;
+    border: 1px solid black;
 }
 
 #button__container  {
